--- a/debian/control
+++ b/debian/control
@@ -3,10 +3,10 @@ Section: net
 Priority: optional
 Maintainer: Matthias Wirth <matthias.wirth@gmail.com>
 Build-Depends: debhelper(>=9), libusb-1.0-0-dev, pkg-config, dh-systemd, libncurses5-dev
-Build-Depends-Indep: librtlsdr0, librtlsdr-dev
+Build-Depends-Indep: librtlsdr0, librtlsdr-dev, zlib1g-dev, zlib1g
 Standards-Version: 4.4.0.1
-Homepage: https://github.com/mictronics/readsb
-Vcs-Git: https://github.com/mictronics/readsb.git
+Homepage: https://github.com/wiedehopf/readsb
+Vcs-Git: https://github.com/wiedehopf/readsb.git
 
 Package: readsb
 Architecture: any
