--- a/debian/rules
+++ b/debian/rules
@@ -23,6 +23,7 @@ CONFIG_SWITCH =
 
 ifneq ($(filter rtlsdr,$(DEB_BUILD_PROFILES)),)
 	CONFIG_SWITCH += 'RTLSDR=yes'
+	CONFIG_SWITCH += 'AIRCRAFT_HASH_BITS=14'
 endif
 
 ifneq ($(filter plutosdr,$(DEB_BUILD_PROFILES)),)
