--- a/debian/rules
+++ b/debian/rules
@@ -24,6 +24,7 @@ CONFIG_SWITCH =
 ifneq ($(filter rtlsdr,$(DEB_BUILD_PROFILES)),)
 	CONFIG_SWITCH += 'RTLSDR=yes'
 	CONFIG_SWITCH += 'AIRCRAFT_HASH_BITS=14'
+	CONFIG_SWITCH += 'HISTORY=yes'
 endif
 
 ifneq ($(filter plutosdr,$(DEB_BUILD_PROFILES)),)
